# verus-copilot-vscode

./: .gitignore  .vscodeignore  README.md  SUPPORT.md  package-lock.json  package.json  tsconfig.json
python/examples/input/: ex-break.rs  ex1.rs  ex5.rs
python/examples/input-all/: ex1.rs  ex2.rs  ex3.rs
python/examples/input-aritherr/: ex1.rs  ex2.rs  ex2_deprecated  ex3.rs
python/examples/input-assert-imply/: ex2.rs
python/examples/input-assert-postpre/: ex6.rs
python/examples/input-assert-seqtake/: ex1.rs
python/examples/input-assert-trigger/: ex1.rs  ex2.rs  ex3.rs  ex4.rs
python/examples/input-comment2spec/: ex1.rs  ex2.rs  ex3.rs  ex4.rs  ex5.rs
python/examples/input-postcond-expand/: ex1.rs
python/examples/input-proof-func/: ex1.rs  ex2.rs  ex3.rs
python/lemmas/: seq_take_all.rs  seq_take_ascend.rs  vec_remove.rs
python/src/: bm25.py  generation.py  houdini.py  infer.py  plugin_repair.py  refinement.py  utils.py  utils_rustmerger.py  veval.py
python/utils/lynette/source/lynette/: Cargo.toml
python/utils/lynette/source/lynette/src/: code.rs  deghost.rs  func.rs  main.rs
python/utils/lynette/source/lynette/src/merge/: merge.rs
src/: codeActionProvider.ts  config.ts  consts.ts  documentProvider.ts  extension.ts  languageClient.ts  pythonRunner.ts  store.ts  syntaxTree.ts
src/code-actions/: fn.ts  index.ts  utils.ts
src/codeActions/: actions.ts  provider.ts  syntaxTree.ts  utils.ts
src/invokePython/: exec.ts  utils.ts
src/ui/: aacsCheck.ts  applyEdit.ts
test/workspace_test/: Cargo.toml  workspace_test.code-workspace
(+66 files in other folders)
