[package]
name = "lynette"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
serde_json = "1.0"
colored = "1.7"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
syn = "1.0"
syn_verus = { git = "https://github.com/verus-lang/verus", rev = "640db41", features = ["full", "extra-traits", "parsing"] }
prettyplease_verus = { git = "https://github.com/verus-lang/verus", rev = "640db41" }
quote = "1.0.36"
tempfile = "3.10.1"
clap = { version = "4.3.11", features = ["derive"] }
once_cell = "1.8.0"